syntax = "proto3";

package payment.v1;

// Payment status enumeration
enum PaymentStatus {
  PAYMENT_STATUS_UNSPECIFIED = 0;
  PAYMENT_STATUS_PENDING = 1;
  PAYMENT_STATUS_PROCESSING = 2;
  PAYMENT_STATUS_COMPLETED = 3;
  PAYMENT_STATUS_FAILED = 4;
}

// Payment represents a payment transaction
message Payment {
  string id = 1;
  string user_id = 2;
  int64 amount = 3;
  string currency = 4;
  PaymentStatus status = 5;
  string description = 6;
  int64 created_at = 7;
  int64 updated_at = 8;
}
